# iac

./: .clang-format  .gitignore  BRIEFING-remote-agent.md  CLAUDE.md  CMakeLists.txt  README.md  justfile
Source/: Main.cpp  Platform-Windows.cpp  Platform-macOS.mm  Platform.h
